--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Hello web</h1>
+    <h1>Hello web changed</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem commodi aspernatur voluptate asperiores eveniet voluptates expedita deleniti dolorum voluptatum aut soluta alias ipsum, at ea illum corrupti mollitia aliquid dignissimos?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, ut provident temporibus, omnis nam nulla beatae dolor error perferendis nisi sequi. Molestias, dolor. Enim odio omnis quae, exercitationem unde molestiae?</p>
 </body>
 </html>
